--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
   "rules": {
     "linebreak-style": 0,
     "react/jsx-filename-extension": 0,
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "react/jsx-props-no-spreading": 0
   }
 }
